--- a/app/views/mx_assessments/edit.html.erb
+++ b/app/views/mx_assessments/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing mx_assessment</h1>
+<!-- <h1>Editing mx_assessment</h1>
+ -->
+<%#= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @mx_assessment %> |
-<%= link_to 'Back', mx_assessments_path %>
+<%#= link_to 'Show', @mx_assessment %> 
+<%#= link_to 'Back', mx_assessments_path %>
