--- a/app/views/mx_assessments/new.html.erb
+++ b/app/views/mx_assessments/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New mx_assessment</h1>
+<!-- <h1>New mx_assessment</h1>
 
-<%= render 'form' %>
+<%#= render 'form' %>
 
-<%= link_to 'Back', mx_assessments_path %>
+<%#= link_to 'Back', mx_assessments_path %>
+ -->
