--- a/app/views/mx_assessments/show.html.erb
+++ b/app/views/mx_assessments/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_mx_assessment_path(@mx_assessment) %> |
-<%= link_to 'Back', mx_assessments_path %>
+<%#= link_to 'Edit', edit_mx_assessment_path(@mx_assessment) %> |
+<%#= link_to 'Back', mx_assessments_path %>
+ -->
