--- a/app/views/mx_assessments/tracker.html.erb
+++ b/app/views/mx_assessments/tracker.html.erb
@@ -1,7 +1,7 @@
-<div id="divMxAWPageWrapper">
+<!-- <div id="divMxAWPageWrapper">
 <div id="divMxAWPageInnerWrapper" class="mx_assessment_index">
 
 TRACKER
 
-</div>  <!-- id="divMxAWPageInnerWrapper" -->
-</div>  <!-- id="divMxAWPageWrapper" -->
+</div>  
+</div>   -->
