--- a/app/views/mxa_tracker/index.html.erb
+++ b/app/views/mxa_tracker/index.html.erb
@@ -95,9 +95,7 @@
 		</form>
 	</div>
 	
-
-
-
+<div id="trash"></div>
 
 </div>  <!-- id="divMxAWPageInnerWrapper" -->
 </div>  <!-- id="divMxAWPageWrapper" -->
