--- a/app/views/mxa_tracker/index.html.erb
+++ b/app/views/mxa_tracker/index.html.erb
@@ -54,8 +54,8 @@
 						<input type="text" id="dt_MxAW_doaBefore">
 					</div>
 					<div class="spacer_vertical_small">
-						<input id="bt_MxAW_csv" value="csv">
-						<input id="bt_MxAW_xls" value="excel">
+						<div id="divForCSV"></div>
+						<div id="divForEXCEL"></div>
 						<!-- <input id="bt_MxAW_pdf" value="pdf"> -->
 					</div>
 					<input id="bt_MxAW_search_select" type="submit" value="Search" /> 
