Past Mx PDF wip

--- a/app/views/mxa_tracker/index.html.erb
+++ b/app/views/mxa_tracker/index.html.erb
@@ -74,7 +74,9 @@
 					<div>
 						<h3>Past Management Asssessments
 						<input type="button" id="bt_MxAW_TogNotes" value="tog"></input>
+						<div id="divForPastMxPDF"></div>
 						</h3>
+
 					</div>
 					<div class="spacer_vertical_small">
 						<textarea id="txa_MxAW_pastAssessments"></textarea>
