info extract pdf

--- a/app/views/mxa_tracker/index.html.erb
+++ b/app/views/mxa_tracker/index.html.erb
@@ -84,8 +84,11 @@
 				</div>
 				<div class="col-1-2">
 					<div>
+						<h3>
 						<select id="slt_MxAWinfo_ChooseInfo"></select>
 						<input type="button" id="bt_MxAW_TogChoseInfo" value="tog"></input>
+						<div id="divForChooseInfoPDF"></div>
+						</h3>
 					</div>
 					<div class="spacer_vertical_small">
 						<textarea id="txa_MxAW_specificAssessments"></textarea>
