--- a/app/views/mxa_tracker/index.html.erb
+++ b/app/views/mxa_tracker/index.html.erb
@@ -18,7 +18,7 @@
 					<div class="spacer_vertical_small">
 						<select id="slt_MxAW_AllLatestNote"></select><span class="text-14-alert">*</span>
 					</div>
-					<div>* must select</div>
+					<div><span class="text-14-alert">*</span> must select</div>
 				</div>
 				<div class="col-1-4">
 					<div>
