rollify key to CONFIG

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Widget Examples/Experiments</h1>
-setup2 for u14dev
+rollify_secret_key in config
 
 <div id="widgetPageWrapper">
 	<div id="dbxModalDialog" title="Basic dialog">
